<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/layout_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/itemArtWorkImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background"
                android:scaleType="fitXY"
                app:cardBackgroundColor="@color/black" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="14dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/itemCollectionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="70"
                android:text="@string/collection_name" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/itemReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/release_date" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>