<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".view.main_page.MainActivity">

    <com.google.android.material.chip.ChipGroup
        android:layout_marginTop="10dp"
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/moviesChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies" />

        <com.google.android.material.chip.Chip
            android:id="@+id/musicChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music" />

        <com.google.android.material.chip.Chip
            android:id="@+id/eBookChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_book" />

        <com.google.android.material.chip.Chip
            android:id="@+id/podcastChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/podcast" />

    </com.google.android.material.chip.ChipGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/searchListRecyclerView"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:visibility="visible"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginTop="30dp"
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:lottie_rawRes="@raw/empty_list_anim"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

            <TextView
                android:id="@+id/searchInfoText"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp" />
    </RelativeLayout>
</LinearLayout>